README: update some of the documentation

--- a/README
+++ b/README
@@ -4,24 +4,22 @@ Please see the corresponding sections below for details.
 
 Dependencies
 ============
-
+  TBD
+  
   URI: <first dependency>
   branch: <branch name>
 
   URI: <second dependency>
   branch: <branch name>
 
-  .
-  .
-  .
-
 Patches
 =======
 
-Please submit any patches against the meta-godot layer to the xxxx mailing list (xxxx@zzzz.org)
-and cc: the maintainer:
+Please submit any patches against the meta-godot layer to
+https://github.com/leograba/meta-godot by pull request.
 
-Maintainer: XXX YYYYYY <xxx.yyyyyy@zzzzz.com>
+
+Maintainer: Leonardo Graboski Veiga <leogveiga@gmail.com>
 
 Table of Contents
 =================
@@ -38,4 +36,5 @@ Run 'bitbake-layers add-layer meta-godot'
 II. Misc
 ========
 
---- replace with specific information about the meta-godot layer ---
+Add to your image using IMAGE_INSTALL_apend = "godot", for instance, to your
+`local.conf`.
